--- a/src/html/goodlist.html
+++ b/src/html/goodlist.html
@@ -77,6 +77,7 @@
 			<script type="text/html" id="barDemo">
 					<a class="layui-btn layui-btn-xs" lay-event="edit">编辑</a>
 					<a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">删除</a>
+					<a class="layui-btn layui-bg-gray layui-btn-xs goodsState" lay-event="state">下架</a>
 			</script>
 		</div>
 		<div class="layui-footer">
