--- a/src/index.html
+++ b/src/index.html
@@ -99,7 +99,7 @@
   
   <div class="layui-footer">
     <!-- 底部固定区域 -->
-    © GX后台管理系统 2018-2030
+    © XX后台管理系统 2018-2030
   </div>
 </div>
 <script>
